[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "necredpy"
version = "0.1.0"
description = "Piecewise-linear DSGE solver with endogenous credibility and production networks"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "sympy>=1.12",
    "jax>=0.4",
    "numpyro>=0.13",
    "arviz>=0.15",
]

[tool.setuptools.packages.find]
include = ["necredpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
